# FL-phishingemail

./: README.md  clientapp.Dockerfile  pyproject.toml  sample_logs.txt  serverapp.Dockerfile
fl_test/: __init__.py  client_app.py  server_app.py  task.py
phishing-backend/: app.py  model.pt
saved_model/: model.pt
thunderbird-extension/: manifest.json  popup.html  popup.js
thunderbird-extenstion-label/: background.js  manifest.json  popup.html  popup.js
