[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-test"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "transformers>=4.30.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=2.0.0, <3.0",
    "scikit-learn>=1.6.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ndhai"

[tool.flwr.app.components]
serverapp = "fl_test.server_app:app"
clientapp = "fl_test.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
min_fit_clients = 2
min_evaluate_clients = 2
min_available_clients = 2
fraction-fit = 0.2
fraction-evaluate = 0.5
local-epochs = 1
model-name = "distilbert-base-uncased"
num-labels = 2
round-timeout = 300

[tool.flwr.federations]
default = "localhost"

[tool.flwr.federations.localhost]
options.num-supernodes = 4

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 1CPUs
options.backend.client-resources.num-gpus = 0 # CPU only

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
options.backend.client-resources.num-cpus = 1
options.num-supernodes = 4